[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.498, 11.0537 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.2082, 2.49804 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.34182, 10.1352 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2147483664
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.61865 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 19 )
collision_mask = 3

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 0, -10.523 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.120659, -1.23174 )
shape = SubResource( 3 )

[node name="side_checker" type="Area2D" parent="."]
position = Vector2( -25.6763, 4.06893 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( -1.26277, 0.982155 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 52.896, 0.982155 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundSquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.172
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
